- Upgrade Springboot 3.2.2, Kotlin 1.9.22, Java 21 - Fix Swagger - Polishing Code